# blinky

./: .gitignore  Cargo.toml  LICENSE  sdkconfig.defaults  sdkconfig.defaults.old
.cargo/: config.toml
firmware/: Cargo.toml  sdkconfig.defaults
firmware/.cargo/: config.toml
firmware/src/: main.rs
firmware/src/modules/: accel_module.rs  ble_module.rs  calendar_module.rs  logging_module.rs  mod.rs  module.rs  persister_module.rs  power_module.rs  reference_time.rs  renderer.rs  rtc_display_fasttrack.rs  rtc_module.rs  time_sync.rs  touch_module.rs  user_input.rs
firmware/src/peripherals/: GC9A01_NOINIT.rs  SH8601.rs  accelerometer.rs  adc.rs  backlight.rs  bma423ex.rs  cst816s.rs  display.rs  gc9a01.rs  hal.rs  mod.rs  nvs_storage.rs  output.rs  rtc.rs  rtc_memory.rs  spi_interface_no_dc.rs  touchpad.rs  wifi.rs
firmware/src/peripherals/pins/: mapping.rs  mod.rs  tdisplay143.rs  twatch_2021.rs
hw_tests/: Cargo.toml  sdkconfig.defaults
hw_tests/.cargo/: config.toml
hw_tests/src/: SH8601.rs  bma423_tests.rs  bmi160_tests.rs  display_api_tests.rs  display_tests.rs  main.rs  spi_interface_no_dc.rs
peripherals/: Cargo.toml
peripherals/src/: bma423ex.rs  i2c_management.rs  i2c_proxy_async.rs  lib.rs
peripherals/src/pins/: mapping.rs  mod.rs  tdisplay143.rs  twatch_2021.rs
shared/: Cargo.toml  stack_debugging
shared/assets/: blinky_watchface_2.tga  blinky_watchface_magic_eye.tga  blinky_watchface_magic_eye_466.tga
shared/src/: calendar.rs  commands.rs  display_interface.rs  domain.rs  error.rs  events.rs  fasttrack.rs  lib.rs  message_bus.rs  persistence.rs  reminders.rs
shared/src/calendar/: mod.rs
shared/src/contract/: packets.rs
shared/src/modules/: calendar_module.rs  fonts_set.rs  graphics.rs  icon_set.rs  icon_set_240.rs  icon_set_466.rs  icons_registry.rs  mod.rs  reference_time.rs  relative.rs  renderer.rs  renderer_icons.rs
shared/src/reference_data/: mod.rs
sim/: Cargo.toml
sim/src/: display.rs  main.rs
src/: error.rs  main.rs  persistence.rs
src/modules/: accel_module.rs  ble_module.rs  calendar_module.rs  module.rs  persister_module.rs  power_module.rs  reference_data.rs  reference_time.rs  renderer.rs  rtc_module.rs  time_sync.rs  touch_module.rs  user_input.rs
src/peripherals/: accelerometer.rs  backlight.rs  bluetooth.rs  bma423ex.rs  display.rs  gc9a01.rs  hal.rs  i2c_management.rs  i2c_proxy.rs  i2c_proxy_async.rs  mod.rs  nvs_storage.rs  rtc.rs  touchpad.rs  wifi.rs
tests/: Cargo.toml
tests/src/: calendar_persistence_tests.rs  contract_serialization_tests.rs  main.rs  spy_module.rs  termperature_decoder_tests.rs
tests/src/modules/: calendar_module_tests.rs  mod.rs  reference_time_module_tests.rs
