[package]
name = "blinky"
version = "0.1.0"
authors = ["Andrey Zak <amzak.only@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
esp-idf-hal = { version = "0.40.1" }
mipidsi = { version = "0.6.0" }
display-interface = "0.4.1"
display-interface-spi = "0.4.1"
embedded-graphics = "0.7.1"
embedded-hal = "0.2.7"
pcf8563 = "0.1.2"
time = { version = "0.3.20", features = ["macros", "serde", "formatting"] }
esp-idf-svc = "0.45.0"
embedded-svc = "0.24.0"
postcard = { version = "1.0.4", features = ["alloc"] }
serde = { version = "1.0.159", default-features = false, features = ["derive"] }
shared-bus = { version = "0.2.5", features = ["std"] }
bma423 = "0.0.1"
log = "0.4.17"
num_enum = "0.6.0"
bitmask-enum = "1.1.3"

[build-dependencies]
embuild = "0.30.4"
