[package]
name = "blinky"
version = "0.1.0"
authors = ["Andrey Zak <amzak.only@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.33.1", features = ["binstart"] }
esp-idf-hal = "0.41.2"
mipidsi = { git = "https://github.com/almindor/mipidsi.git", branch = "master" }
display-interface = "0.4.1"
display-interface-spi = "0.4.1"
embedded-graphics = "0.8.0"
embedded-hal = "1.0.0-alpha.10"
embedded-hal-compat = "0.10.1"
pcf8563 = "0.1.2"
time = { version = "0.3.20", features = ["macros", "serde", "formatting"] }
esp-idf-svc = "0.46.2"
embedded-svc = "0.25.3"
postcard = { version = "1.0.4", features = ["alloc"] }
serde = { version = "1.0.159", default-features = false, features = ["derive"] }
bma423 = "0.0.1"
log = "0.4.17"
num_enum = "0.6.0"
bitmask-enum = "1.1.3"
cst816s = "0.1.4"
esp32-nimble = "0.1.4"
embedded-hal-bus = "0.1.0-alpha.2"

[build-dependencies]
embuild = "0.30.4"
