[package]
name = "blinky"
version = "0.1.0"
authors = ["Andrey Zak <amzak.only@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[patch.crates-io]
tokio = { git = "https://github.com/tokio-rs/tokio", branch = "master" }

[dependencies]
esp-idf-sys = { version = "0.33.1", features = ["binstart"] }
esp-idf-hal = { version = "0.42.2", features = ["alloc"] }
mipidsi = { git = "https://github.com/almindor/mipidsi.git", branch = "master" }
display-interface = "0.4.1"
display-interface-spi = "0.4.1"
embedded-graphics = "0.8.0"
embedded-hal = "1.0.0-rc.1"
#embedded-hal-compat = "0.10.1"
embedded-hal-compat = { path = "/home/amzak/projects/rust/esp32/embedded-hal-compat" }
pcf8563 = "0.1.2"
time = { version = "0.3.20", features = ["macros", "serde", "formatting"] }
esp-idf-svc = "0.47.1"
embedded-svc = "0.26.1"
postcard = { version = "1.0.4", features = ["alloc"] }
serde = { version = "1.0.159", default-features = false, features = ["derive"] }
bma423 = "0.0.1"
log = "0.4.20"
num_enum = "0.6.0"
bitmask-enum = "1.1.3"
cst816s = "0.1.4"
#esp32-nimble = "0.2.2"
esp32-nimble = { git = "https://github.com/taks/esp32-nimble", branch = "develop" }
embedded-hal-bus = { version = "0.1.0-alpha.2", features = ["std"] }
rmp-serde = "1.1.2"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "sync", "time", "macros"] }
critical-section = "1.1.2"
profont = "0.7.0"
tokio-util = "0.7.10"
embedded-graphics-framebuf = "0.5.0"

[build-dependencies]
embuild = "0.31.3"
