[package]
name = "blinky"
version = "0.1.0"
authors = ["Andrey Zak <amzak.only@gmail.com>"]
edition = "2021"
rust-version = "1.80"

[[bin]]
name = "blinky"
harness = false
test = false

[profile.release]
opt-level = 3

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[patch.crates-io]

[dependencies]
esp-idf-sys = { version = "0.34.1", features = ["binstart"] }
esp-idf-hal = { version = "0.43.0", features = ["alloc"], default-features = false }
esp-idf-svc = "0.48.0"
mipidsi = { version = "0.8.0" }
display-interface = "0.5.0"
display-interface-spi = "0.5.0"
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
#embedded-hal-compat = "0.12.0"
embedded-hal-compat = { path = "/home/amzak/projects/rust/esp32/embedded-hal-compat" }
pcf8563 = "0.1.2"
time = { version = "0.3.36", features = ["macros", "serde", "formatting"] }
embedded-svc = "0.26.1"
serde = { version = "1.0.159", default-features = false, features = ["derive"] }
bma423 = "0.0.3"
log = "0.4.20"
num_enum = "0.6.0"
bitmask-enum = "1.1.3"
cst816s = "0.1.4"
esp32-nimble = "0.6.0"
embedded-hal-bus = { version = "0.1.0-alpha.2", features = ["std"] }
rmp-serde = "1.1.2"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "sync", "time", "macros"] }
critical-section = "1.1.2"
profont = "0.7.0"
embedded-graphics-framebuf = "0.5.0"
embedded-icon = { version = "0.0.1", features = ["18px"] }
strum_macros = "0.25.3"
futures = "0.3.30"
enumflags2 = "0.7.10"

peripherals = { path = "../peripherals" }
blinky-shared = { path = "../shared" }

[build-dependencies]
embuild = { version = "0.31.4", features = ["espidf"] }
