[package]
name = "peripherals"
version = "0.1.0"
edition = "2021"

[lib]
harness = false
test = false

[features]
default = ["tdisplay143"]
twatch_2021 = []
tdisplay143 = []

[dependencies]
bma423 = "0.0.3"
bitmask-enum = "1.1.3"
embedded-hal = "1.0.0"
num_enum = "0.6.0"
critical-section = "1.1.2"
esp-idf-hal = { version = "0.45.2", features = ["alloc"], default-features = false }

blinky-shared = { path = "../shared" }
