[package]
name = "blinky-shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { version = "0.3.20", features = ["macros", "serde", "formatting"] }
serde = { version = "1.0.159", default-features = false, features = ["derive"] }
strum_macros = "0.25.3"
rmp-serde = "1.1.2"
embedded-graphics = "0.8.1"
embedded-graphics-framebuf = "0.5.0"
embedded-icon = { version = "0.0.1", features = ["18px"] }
tokio = { version = "1.34.0", features = ["rt-multi-thread", "sync", "time", "macros"] }
log = "0.4.20"
profont = "0.7.0"