[package]
name = "blinky-shared"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[lib]
harness = false
test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { version = "0.3.36", features = ["macros", "serde", "formatting"] }
serde = { version = "1.0.159", default-features = false, features = ["derive"] }
serde_repr = "0.1.18"
serde_bytes = "0.11"
serde_with = "3.8.1"
rmp-serde = "1.1.2"
strum_macros = "0.25.3"
embedded-graphics = "0.8.1"
embedded-graphics-framebuf = "0.5.0"
embedded-icon = { version = "0.0.1", features = ["12px", "18px"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "sync", "time", "macros"] }
log = "0.4.20"
u8g2-fonts = { version = "0.4.0", features = ["embedded_graphics_textstyle"] }
tinytga = "0.5.0"
enumflags2 = "0.7.10"