[package]
name = "sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.8.1"
embedded-graphics-simulator = "0.6.0"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "sync", "time", "macros"] }
blinky-shared = { path = "../shared" }