[package]
name = "sim"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[[bin]]
name = "sim"
harness = false
test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
env_logger = "0.11.1"
embedded-graphics = "0.8.1"
embedded-graphics-simulator = "0.6.0"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "sync", "time", "macros"] }
embedded-graphics-framebuf = "0.5.0"
time = { version = "0.3.36", features = ["macros", "serde", "formatting", "local-offset"] }
enumflags2 = "0.7.10"

blinky-shared = { path = "../shared" }
