[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmp-serde = "1.1.2"
serde = { version = "1.0.159", default-features = false, features = ["derive"] }
time = { version = "0.3.20", features = ["macros", "serde", "formatting", "local-offset"] }
blinky-shared = { path = "../shared" }
